syntax = "proto3";

service YourService {
    rpc GetVideos (GetVideosRequest) returns (GetVideosResponse);
}

message GetVideosRequest {}

message Video {
    string id = 1;
    string youtube_id = 2;
    string created_at = 3;
    string updated_at = 4;
}

message GetVideosResponse {
    repeated Video videos = 1;
} 